# softNeck

./: CMakeLists.txt  README.md
examples/: Prueba.py  ReinforcementNeck.py  WrapperNeck.py  imu-yarp.py
lib/CiA402Device/: CMakeLists.txt  CiA301CommPort.cpp
lib/fcontrol/: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Doxyfile  README.md  fcontrolConfig.cmake
lib/fcontrol/docs/: BlockDiagram_8h_source.html  Block_8h_source.html  ControllerBlock_8h_source.html  FPDBlock_8h_source.html  FPDTuner_8h_source.html  FSystemBlock_8h_source.html  FactorSystemBlock_8h_source.html  FractionalController1DOF_8h_source.html  FractionalDerivative_8h_source.html  LinearSystem_8h_source.html  OnlineSystemIdentification_8h_source.html  PIDBlock.html  PIDBlock_8h_source.html  SignalSum_8h_source.html  StateSpace_8h_source.html  StateVariableBlock_8h_source.html  StateVariable_8h_source.html  SystemBlock.html  SystemBlockChain_8h_source.html  SystemBlock_8h_source.html  SystemTF_8h_source.html  TimeSignal_8h_source.html  ToolsFControl_8h_source.html  TransferFunction_8h_source.html  annotated.html  classBaseBlock-members.html  classBaseBlock.html  classBaseBlock__inherit__graph.md5  classBlock-members.html  classBlock.html  classBlockDiagram-members.html  classBlockDiagram.html  classBlock__inherit__graph.md5  classControllerBlock-members.html  classControllerBlock.html  classControllerBlock__inherit__graph.md5  classFPDBlock-members.html  classFPDBlock.html  classFPDBlock__inherit__graph.md5  classFPDTuner-members.html  (+76 more)
lib/fcontrol/docs/latex/: PIDBlock.tex  SystemBlock.tex  annotated.tex  classBaseBlock.tex  classBaseBlock__inherit__graph.md5  classBlock.tex  classBlockDiagram.tex  classBlock__inherit__graph.md5  classControllerBlock.tex  classControllerBlock__coll__graph.md5  classFPDBlock.tex  classFPDBlock__coll__graph.md5  classFPDTuner.tex  classFSystemBlock.tex  classFSystemBlock__coll__graph.md5  classFactorSystemBlock.tex  classFactorSystemBlock__inherit__graph.md5  classFractionalController1DOF.tex  classFractionalController1DOF__coll__graph.md5  classFractionalDerivative.tex  classFractionalDerivative__coll__graph.md5  classKalmanFilter.tex  classLinearSystem.tex  classLinearSystem__inherit__graph.md5  classOnlineSystemIdentification.tex  classPIDBlock.tex  classPIDBlock__coll__graph.md5  classSamplingTime.tex  classSignalSum.tex  classStateSpace.tex  classStateSpace__inherit__graph.md5  classStateVariable.tex  classStateVariableBlock.tex  classStateVariableBlock__coll__graph.md5  classSystemBlock.tex  classSystemBlockChain.tex  classSystemBlock__coll__graph.md5  classSystemBlock__inherit__graph.md5  classSystemTF.tex  classSystemTF__coll__graph.md5  (+6 more)
lib/fcontrol/docs/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  pages_0.js  pages_1.js  pages_2.js  searchdata.js
lib/fcontrol/newsrc/: libinterface.cpp  libinterface.h
lib/fcontrol/src/: Block.cpp  Block.h  BlockDiagram.cpp  BlockDiagram.h  ControllerBlock.cpp  ControllerBlock.h  FPDBlock.cpp  FPDBlock.h  FPDTuner.cpp  FPDTuner.h  FSystemBlock.cpp  FSystemBlock.h  FactorSystemBlock.cpp  FactorSystemBlock.h  FractionalController1DOF.cpp  FractionalController1DOF.h  FractionalDerivative.cpp  FractionalDerivative.h  LinearSystem.cpp  LinearSystem.h  OnlineSystemIdentification.cpp  OnlineSystemIdentification.h  PIDBlock.cpp  PIDBlock.h  SignalSum.cpp  SignalSum.h  StateObserver.cpp  StateObserver.h  StateSpace.cpp  StateSpace.h  StateVariable.cpp  StateVariable.h  StateVariableBlock.cpp  StateVariableBlock.h  SystemBlock.cpp  SystemBlock.h  SystemBlockChain.cpp  SystemBlockChain.h  SystemTF.cpp  SystemTF.h  (+9 more)
lib/i-plot/: CMakeLists.txt  IPlot.cpp  IPlot.h  README.md
lib/i-plot/cmake/: FindPLOTUTILS.cmake
lib/sensor-integration/: CMakeLists.txt  README.md  SerialComm.h
main/: getTable.cpp  goHome.cpp  hello.cpp  imu.cpp  setPosition.cpp  tenseAndControl.cpp  tenseTendons.cpp
script/: ignoreLocalUpdate
utils/: startMotors.cpp  stopMotors.cpp
